--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@ layout: default
 title: Your New Jekyll Site
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+<ul class="posts">
+
+  {% for post in site.posts %}
+
+    <li>
+      <h2><a href="{{ post.url }}#content">{{ post.title }}</a></h2>
+
+      {{ post.excerpt }}
+      <a href="{{ post.url }}#content" class="more">Read</a>
+   	</li>
+
+  {% endfor %}
+
+</ul>
