--- a/about/index.html
+++ b/about/index.html
@@ -71,7 +71,7 @@
 						<h3>University of the West of England</h3>
 						<p>Multimedia Computing BSc Hons - 2006-2009</p>
 
-						<h2 class="section-heading portfolio-icon">Portfolio</h2>
+						<h2 class="section-heading portfolio-icon">Recent Work</h2>
 
 					</div>
 
